@@ -57,7 +57,7 @@ MySQL_Uri::MySQL_Uri()
 const sql::SQLString & MySQL_Uri::Host()
 {
 	static const sql::SQLString hostValue4Pipe(".");
-	const sql::SQLString & hostValue4sock= util::LOCALHOST;
+	static const sql::SQLString hostValue4sock(util::LOCALHOST);
 
 	switch (Protocol())
 	{
@@ -80,7 +80,8 @@ const sql::SQLString & MySQL_Uri::SocketOrPipe()
 {
 	if (tcpProtocol(*this))
 	{
-		return util::EMPTYSTR;
+		static const sql::SQLString emptystr(util::EMPTYSTR);
+		return emptystr;
 	}
 
 	return host;
